fixed spacing

--- a/style.css
+++ b/style.css
@@ -519,18 +519,17 @@
     border: 1px solid rgba(14, 14, 14, 0.15);
     background: rgba(255, 255, 255, 0.1);
     margin: 0px -1px;
-    height: 60px;
     width: 910px;
+    height: 44px;
 }
 
 
 
 .table-col-2{
-    padding: 24px;
+    padding: 24px 32px 24px 17px;
     border: 1px solid rgba(14, 14, 14, 0.15);
     background: rgba(255, 255, 255, 0.1);
     margin: 0px -1px;
-    height: 60px;
     width: 145px;
 }
 
@@ -544,6 +543,7 @@
     line-height: 19px;
     letter-spacing: 0%;
     text-align: left;
+    padding-top: 13px;
 }
 
 
@@ -807,6 +807,17 @@
     height: 24px;
     margin: 32px 0px;
 }
+
+
+.donation .amount::placeholder{
+    color: rgba(14, 14, 14, 0.3);
+    font-family: Fira Sans;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+}
 /* donate section ends here  */
 
 
@@ -868,6 +879,17 @@
     border-radius: 8px 0px 0px 8px;
     background: rgb(255, 255, 255);
     border: 0px;
+}
+
+
+.letter-form input::placeholder{
+    color: rgba(14, 14, 14, 0.3);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
 }
 
 
